# auto-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bandit.yml  codeql.yml
src/ftf_auto_transcriber/: __init__.py  __main__.py  extract_audio.py  subtitle.py  transcribe.py  utils.py
