[project]
name = "ftf-auto-transcriber"
description = "Workflow automation to auto-extract, pre-process, transcribe, post-process, diatirize and format subtitles for any given video file."
authors = [{ name = "Ivo Robotnic", email = "theivorobotnic@gmail.com" }]
version = "0.2.0"
requires-python = "~=3.11"
dependencies = [
    "whisperx==3.8.6",
    "faster-whisper==1.2.1",
    "ffmpeg-python==0.2.0",
    "ffmpeg-studio==0.1.2",
    "ass==1.0.3",
]

[project.optional-dependencies]
dev = ["ruff==0.15.18", "ipdb==0.13.13"]
rocm = ["pytorch-rocm-gtt==0.1.4"]

[project.scripts]
ftf-auto-transcriber = "ftf_auto_transcriber.__main__:main"
